tests/cases/fail/dict_native_values_values.p4
import json

def main() -> None:
    data: dict[str, json.Value] = {}
    values = data.values()
